--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 greeting=Welcome to Recipe
+recipe=Recipe
 recipes=Recipes
 name=Name
 description=Description
@@ -10,5 +11,12 @@ recipeName=Recipe Name
 recipeDescription=Recipe Description
 viewRecipe=View Recipe
 editRecipe=Edit Recipe
+error=Error
+date=Date
+path=Path
+errorType=Error Type
+status=Status
+message=Message
 
 addRecipeButton=Add Recipe
+saveButton=Save
