--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -1,4 +1,5 @@
-greeting=Benvenuto a Recipe
+greeting=Benvenuto a Ricette
+recipe=Ricetta
 recipes=Ricette
 name=Nome
 description=Descrizione
@@ -10,5 +11,12 @@ recipeName=Nome Della Dicetta
 recipeDescription=Descrizione Della Ricetta
 viewRecipe=Visualizza Ricetta
 editRecipe=Modifica ricetta
+error=Errore
+date=Data
+path=Path
+errorType=Tipo di Errore
+status=Stato
+message=Messaggio
 
 addRecipeButton=Aggiungi Ricetta
+saveButton=Salva
